# carapace

./: .carapace.yaml  .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  PRD.md  README.md  SPEC.md  pyproject.toml  setup.py
carapace/: __init__.py  actioning.py  algorithms.py  canonical.py  cli.py  clustering.py  config.py  enrichment.py  fingerprint.py  hooks.py  loader.py  logging_utils.py  low_pass.py  models.py  pipeline.py  repo_validation.py  reporting.py  similarity.py  webapp.py  webapp_routes.py  webapp_viewmodels.py
carapace/commands/: audit.py  common.py  ingest.py  parser.py  process.py  scan.py  serve.py  triage.py
carapace/connectors/: __init__.py  base.py  github_gh.py
carapace/embeddings/: base.py  local_hash.py  openai_compatible.py
carapace/services/: __init__.py  command_runtime.py  interfaces.py
carapace/storage/: __init__.py  base.py  sqlite.py
carapace/templates/: clusters_fragment.html  index.html
examples/: openclaw.carapace.yaml
tests/: test_algorithms.py  test_canonical.py  test_cli.py  test_clustering.py  test_config.py  test_fingerprint.py  test_github_connector.py  test_hooks.py  test_loader.py  test_low_pass.py  test_openai_compatible_embeddings.py  test_pipeline.py  test_repo_validation.py  test_reporting_actioning.py  test_similarity.py  test_storage.py  test_webapp.py
