[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carapace"
version = "0.1.0"
description = "PR and issue triage orchestration with similarity clustering and canonical ranking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Carapace Contributors" }
]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.14.0",
  "mypy>=1.11",
  "types-PyYAML>=6.0",
  "pre-commit>=3.8",
  "codespell>=2.4",
  "bandit>=1.8"
]
ui = [
  "fastapi>=0.116",
  "uvicorn>=0.35",
  "jinja2>=3.1",
]

[project.scripts]
carapace = "carapace.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["carapace*"]

[tool.setuptools.package-data]
carapace = ["templates/*.html"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = false
disable_error_code = ["import-untyped"]
exclude = [
  "tests/",
]

[[tool.mypy.overrides]]
module = [
  "yaml",
  "yaml.*",
  "fastapi",
  "fastapi.*",
  "uvicorn",
  "uvicorn.*",
]
ignore_missing_imports = true
